objects/Scheduling_Time__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For Scheduling App</description>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Separation__c</fullName>
        <label>Time Separation</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Scheduling Time</label>
</CustomObject>